# echothink-clawcluster

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
docs/: architecture.md
scripts/: backup.sh  healthcheck.sh  setup-minio-buckets.sh
services/policy-bridge/: Dockerfile  pyproject.toml
services/policy-bridge/src/: auth.py  config.py  logging_utils.py  main.py
services/policy-bridge/src/api/: __init__.py  routes.py
services/policy-bridge/src/models/: __init__.py  policy.py
services/policy-bridge/src/policies/: __init__.py  approval.py  budget.py  evaluator.py
services/policy-bridge/src/storage/: __init__.py  matrix.py  supabase.py
services/policy-bridge/tests/: test_approval_policy.py  test_budget_policy.py
services/publisher-bridge/: Dockerfile  pyproject.toml
services/publisher-bridge/.pytest_cache/v/cache/: nodeids
services/publisher-bridge/src/: config.py  main.py
services/publisher-bridge/src/api/: routes.py
services/publisher-bridge/src/models/: __init__.py  publish.py
services/publisher-bridge/src/publishers/: __init__.py  base.py  dify.py  gitlab.py  n8n.py  outline.py  registry.py
services/publisher-bridge/src/storage/: __init__.py  minio.py  supabase.py
services/publisher-bridge/tests/: conftest.py  test_gitlab_publisher.py  test_outline_publisher.py
skills/: code.repo.fix_from_review.yaml  code.repo.implement.yaml  code.repo.review.yaml  doc.outline.read.yaml  doc.outline.write_draft.yaml  graph.search.yaml  graph.sync_episode.yaml  plan.breakdown.yaml  (+5 more)
(+120 files in other folders)
