[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "publisher-bridge"
version = "0.1.0"
description = "EchoThink ClawCluster publisher bridge"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-gitlab>=4.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = []
